--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   color: #121212;
   font-size: 16px;
   width: 100%;
+  font-weight: 500;
   margin: 0px;
   overflow-wrap: break-word;
   /* margin-top: 69.33px; */
@@ -22,17 +23,18 @@ body {
 /* TYPOLOGY */
 h1 {
   font-weight: 700;
-  font-size: 1.9em;
+  font-size: 2.3em;
 }
 
 h2 {
-  font-size: 1.4em;
+  font-size: 1.8em;
   font-weight: 600;
 }
 
 h3 {
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-weight: 600;
+  color: #156565;
 }
 
 h4 {
@@ -218,23 +220,31 @@ section {
 .modal {
   display: none;
   position: fixed;
-  padding: 10vh 0;
+  padding: 7vh 0;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(255, 255, 255, 0.9);
+  background-color: rgb(255, 255, 255, 0.92);
 }
 
 /* Modal Content */
 .modal-content {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   margin: auto;
   padding: 0;
   width: 90%;
   max-width: 1200px;
+}
+
+.details {
+  width: 70%;
 }
 
 #modal-img {
@@ -242,12 +252,23 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 15px;
 }
 
 #modal-img img {
   max-width: 80%;
-  max-height: 80vh;
+  max-height: 60vh;
   object-fit: contain;
+  box-shadow: 4px 4px 14px 0px rgba(0, 0, 0, 0.4);
+}
+
+#img-title {
+}
+
+#img-description {
+}
+
+#img-caption {
 }
 
 /* The Close Button */
@@ -256,7 +277,7 @@ section {
   position: absolute;
   top: 10px;
   right: 25px;
-  font-size: 35px;
+  font-size: 4em;
   font-weight: bold;
 }
 
@@ -275,32 +296,32 @@ section {
 /* Next & previous buttons */
 .prev,
 .next {
-  display: none;
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
+  color: #3b8180;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 5em;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 50%;
   user-select: none;
+  line-height: 0;
   -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
+.prev {
+  left: 0;
+}
+
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #3b8180;
 }
 
 img.hover-shadow {
@@ -360,5 +381,9 @@ img.hover-shadow {
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
+  }
+
+  .details {
+    width: 60%;
   }
 }
