--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,25 @@ img.hover-shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+/* Chapter navigation */
+
+.chapter-nav {
+  padding-bottom: 0;
+}
+.chapter-nav button {
+  padding: 10px 20px;
+  border-radius: 2px;
+  font-size: 1em;
+  color: #121212;
+  border: #eab7b6 2px solid;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.chapter-nav button:hover {
+  background-color: #eab7b6;
+}
+
 @media only screen and (min-width: 426px) {
   .gallery {
     -webkit-column-count: 2;
